# minicraft-launcher

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml  tauri.yml
scripts/: licenses.ts
src/: App.css  App.scss  App.tsx  fonts.scss  index.css  light.scss  main.scss  main.tsx  night.scss  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: dark_theme.yml  light_theme.yml  log4rs.yml
src-tauri/src/: main.rs  profiles.rs  settings.rs  themes.rs  utils.rs
src/assets/: credits.json  licenses.json  thirdparty_licenses.json  translations.json
src/assets/translations/: en-GB.json  en-US.json  es-ES.json  es-MX.json  pt-BR.json  pt-PT.json
src/components/AlertMessages/: index.scss  index.tsx
src/components/Checkbox/: index.scss  index.tsx
src/components/LButton/: index.scss  index.tsx
src/components/LauncherNewsDialog/: index.scss  index.tsx
src/components/LicensesDialog/: index.scss  index.tsx
src/components/LoadingSpinner/: index.scss  index.tsx
src/components/MainMenuTab/: index.css  index.scss  index.tsx
src/components/ModalDialog/: index.scss  index.tsx
src/components/Notifications/: index.scss  index.tsx
src/components/PatchNoteCard/: index.scss  index.tsx
src/components/PatchNotesDialog/: index.scss  index.tsx
src/components/PatchNotesList/: index.scss  index.tsx
src/components/PlayButton/: index.scss  index.tsx
src/components/SearchBox/: index.scss  index.tsx
src/components/Select/: index.scss  index.tsx
src/components/SubMenu/: index.css  index.scss  index.tsx
src/components/Tooltip/: index.scss  index.tsx
src/context/: AboutContext.tsx  FAQContext.tsx  NewsContext.tsx  NotificatonsContext.tsx  PatchNotesContext.tsx  ProfilesContext.tsx  SettingsContext.tsx  TranslationContext.tsx  UIStateContext.tsx
src/hooks/: useId.tsx  useNotifications.tsx  useTranslation.tsx  useUIState.tsx
src/routes/Community/: index.tsx
src/routes/Minicraft/: index.tsx
src/routes/Minicraft/Installations/: index.tsx
src/routes/Minicraft/PatchNotes/: index.tsx
src/routes/Minicraft/Play/: index.tsx
src/routes/MinicraftPlus/: index.tsx
src/routes/MinicraftPlus/FAQ/: index.scss  index.tsx
src/routes/MinicraftPlus/Installations/: index.scss  index.tsx
src/routes/MinicraftPlus/PatchNotes/: index.scss  index.tsx
src/routes/MinicraftPlus/Play/: index.scss  index.tsx
src/routes/News/: index.scss  index.tsx
src/routes/News/components/NewsItem/: index.scss  index.tsx
src/routes/News/pages/Forum/: index.scss  index.tsx
src/routes/News/pages/Minecraft/: index.scss  index.tsx
src/routes/News/pages/MinecraftForum/: index.tsx
src/routes/News/pages/MinecraftTop/: index.tsx
src/routes/Settings/: index.tsx
src/routes/Settings/pages/About/: index.scss  index.tsx
src/routes/Unitycraft/: index.tsx
src/routes/Unitycraft/installations/: index.tsx
src/routes/Unitycraft/patchnotes/: index.tsx
src/routes/Unitycraft/play/: index.tsx
(+14 files in other folders)
