[package]
name = "minicraft-launcher"
version = "0.1.0"
description = "A launcher for Minicraft"
authors = ["KalmeMarq"]
license = "GLP-3.0"
repository = "https://github.com/MinicraftLauncher/minicraft-launcher-renew"
default-run = "minicraft-launcher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1.0", features = [] }

[dependencies]
dirs = "4.0"
serde_json = "1.0"
chrono = "0.4.22"
time = { version = "0.3.14", features = ["serde", "serde-well-known"] }
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.0", features = ["api-all", "updater"] }

[features]
default = [ "custom-protocol" ]

custom-protocol = [ "tauri/custom-protocol" ]
